contrast issues

--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -33,6 +33,7 @@
     font-size: 25px;
     padding: 5px;
     font-family: 'Shadows Into Light', cursive;
+    font-weight: bold;
 }
 .sunlogo {
     width: 65px;
